# Entity

./: CMakeLists.txt  README.md  entity.qml  entity.qrc  entity.rc  logic.js  main.cpp  resource.h
gtests/: CMakeLists.txt  gTestsClass.cpp  gTestsClass.h  gTestsFeatures.cpp  main.cpp
libLogic/: CMakeLists.txt  logic.cpp  logic.h
libSettings/: CMakeLists.txt  settings.cpp  settings.h  settings.xml
libTale/: CMakeLists.txt  tale.cpp  tale.h
qml/: ColourModel.qml  Configs.qml  First.qml  Fragment.qml  Game.qml  RockAndRoll.qml  ThemeButton.qml  ThemeItem.qml  settings.qml  start.qml
